[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Images/Enemies/Runner.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Soldier.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/explosion.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 102, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 136, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 170, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 204, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 15 ) ],
"loop": true,
"name": "Explode",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 14.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 9, 0.5 )

[node name="Soldier" type="Node2D" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Run"
frame = 4
speed_scale = 2.0
playing = true
flip_h = true

[node name="SoldierColision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoldierColision"]
position = Vector2( 0, 8.5 )
shape = SubResource( 4 )

[node name="RightFoot" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RightFoot"]
position = Vector2( -9, 24 )
shape = SubResource( 16 )

[node name="LeftFoot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftFoot"]
position = Vector2( 9, 24 )
shape = SubResource( 17 )

[node name="FootPoint" type="Node2D" parent="."]
position = Vector2( 0, 23 )

[node name="FootCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootCollision"]
position = Vector2( 0, 22.5 )
shape = SubResource( 19 )

[connection signal="area_entered" from="SoldierColision" to="." method="_on_SoldierColision_area_entered"]
[connection signal="area_entered" from="RightFoot" to="." method="_on_RightFoot_area_entered"]
[connection signal="area_exited" from="RightFoot" to="." method="_on_RightFoot_area_exited"]
[connection signal="area_entered" from="LeftFoot" to="." method="_on_LeftFoot_area_entered"]
[connection signal="area_exited" from="LeftFoot" to="." method="_on_LeftFoot_area_exited"]
[connection signal="area_entered" from="FootCollision" to="." method="_on_FootCollision_area_entered"]
[connection signal="area_exited" from="FootCollision" to="." method="_on_FootCollision_area_exited"]
[connection signal="area_shape_entered" from="FootCollision" to="." method="_on_FootCollision_area_shape_entered"]
[connection signal="area_shape_exited" from="FootCollision" to="." method="_on_FootCollision_area_shape_exited"]
